--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.65.0
+ * style.css v6.65.1
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -198,7 +198,7 @@ ol, h2 + dl, h2 + figure, h2 + table {
       .section-footer p {
         margin-top: 0.391rem; } }
 
-.site-search, .searchbox, figure, .global-header, .logo, .content, .content > article,
+.site-search, .searchbox, figure, .global-header, .content, .content > article,
 .content > section, .subcontent, .global-footer, .post-list li {
   position: relative; }
 
@@ -442,22 +442,11 @@ th {
     border-bottom-width: 0.125rem; }
 
 .logo {
-  background-color: #5bacd0;
+  background-color: transparent;
   display: block;
-  height: 1.86rem;
+  height: 3.01rem;
   margin-left: 0.809rem;
-  padding-top: 0.575rem;
   width: 1.86rem; }
-  .logo::after {
-    border-right: 1.86rem solid transparent;
-    border-top: 0.575rem solid #5bacd0;
-    content: '';
-    display: block;
-    height: 0;
-    left: 0;
-    position: absolute;
-    top: 100%;
-    width: 0; }
 
 .site-navigation {
   font-size: 0.811rem;
