Change `above` to `these`

--- a/src/html/index.mustache
+++ b/src/html/index.mustache
@@ -75,7 +75,7 @@
           <li><a href="/feed" rel="alternate" type="application/rss+xml"><img alt="Feed" src="../../images/icon/feed.min.svg"></a></li>
         </ul>
 
-        <p>このウェブサイトの更新情報は、以上のソーシャル・ネットワークやRSSフィードで購読することが出来ます。お好きな方法でぜひ購読してみてください。</p>
+        <p>このウェブサイトの更新情報は、これらソーシャル・ネットワークやRSSフィードで購読することが出来ます。お好きな方法でぜひ購読してみてください。</p>
       </section>
     </main>
 
