--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.65.1
+ * style.css v6.65.2
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -355,9 +355,9 @@ figcaption {
 
 a {
   background-image: linear-gradient(transparent 50%, #5bacd0 50%);
-  background-position: 0 1.063em;
+  background-position: 0 87.5%;
   background-repeat: repeat-x;
-  background-size: 0.125rem 0.125rem;
+  background-size: 2px 2px;
   color: inherit;
   text-decoration: none; }
 
@@ -896,6 +896,9 @@ html {
 
   .content {
     margin-top: 0; }
+
+  .first-heading {
+    margin-top: 3.236rem; }
 
   .byline {
     margin-top: 6.854rem; } }
