--- a/styles/debug.css
+++ b/styles/debug.css
@@ -43,6 +43,9 @@
       background-image: linear-gradient(to right, #0f0 0, #0f0 0.809rem, #f0f 0.809rem, #f0f 13.56rem, #0f0 13.56rem, #0f0 15.178rem, #f0f 15.178rem, #f0f 51.178rem, #0f0 51.178rem, #0f0 51.987rem);
       background-size: 51.987rem 1px; } }
 
+.show-outline * {
+  outline: 1px solid #f0f; }
+
 body::after {
   background-color: #096;
   bottom: .5rem;
