--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.65.2
+ * style.css v6.65.3
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -142,7 +142,6 @@ td {
     clear: both; }
 
 .section-footer p, .read-older p {
-  -moz-font-feature-settings: normal;
   -webkit-font-feature-settings: normal;
   font-feature-settings: normal;
   overflow: hidden;
@@ -173,9 +172,14 @@ hr, .seealso {
     background-repeat: no-repeat;
     background-size: contain; }
 
-h1 a, .global-header a, .section-footer a, .global-footer a, .icon-list a, .read-older a, .seealso a, .seemore a, .topic a, .share-buttons a {
-  background-image: none;
-  color: #1188bb; }
+h1 a, .global-header a, .section-footer a, .global-footer a, .icon-list a, .read-older a, .seemore a, .topic a, .share-buttons a {
+  text-decoration: none; }
+  @supports (-moz-text-decoration-color: red) or (-webkit-text-decoration-color: red) or (text-decoration-color: red) {
+    h1 a, .global-header a, .section-footer a, .global-footer a, .icon-list a, .read-older a, .seemore a, .topic a, .share-buttons a {
+      -moz-text-decoration-color: initial;
+      -webkit-text-decoration-color: initial;
+      text-decoration-color: initial;
+      color: #1188bb; } }
 
 p, hr, pre, ul,
 ol, dl, figure, table {
@@ -230,7 +234,6 @@ ol, h2 + dl, h2 + figure, h2 + table {
   width: 1.618rem; }
 
 html {
-  -moz-font-feature-settings: "kern" 1, "liga" 1, "lnum" 1, "pnum" 1;
   -webkit-font-feature-settings: "kern" 1, "liga" 1, "lnum" 1, "pnum" 1;
   font-feature-settings: "kern" 1, "liga" 1, "lnum" 1, "pnum" 1;
   font-size: 100%; }
@@ -273,7 +276,6 @@ hr {
     background-repeat: repeat-x; }
 
 pre {
-  -moz-font-feature-settings: "kern" 0, "liga" 0, "pnum" 0, "tnum" 1, "zero" 1;
   -webkit-font-feature-settings: "kern" 0, "liga" 0, "pnum" 0, "tnum" 1, "zero" 1;
   font-feature-settings: "kern" 0, "liga" 0, "pnum" 0, "tnum" 1, "zero" 1;
   clear: both;
@@ -354,12 +356,14 @@ figcaption {
         width: auto; } }
 
 a {
-  background-image: linear-gradient(transparent 50%, #5bacd0 50%);
-  background-position: 0 87.5%;
-  background-repeat: repeat-x;
-  background-size: 2px 2px;
-  color: inherit;
-  text-decoration: none; }
+  color: #1188bb;
+  text-decoration: underline; }
+  @supports (-moz-text-decoration-color: red) or (-webkit-text-decoration-color: red) or (text-decoration-color: red) {
+    a {
+      -moz-text-decoration-color: #5bacd0;
+      -webkit-text-decoration-color: #5bacd0;
+      text-decoration-color: #5bacd0;
+      color: inherit; } }
 
 em {
   color: #534a47;
@@ -417,7 +421,6 @@ video {
     vertical-align: bottom; }
 
 table {
-  -moz-font-feature-settings: "pnum" 0, "tnum" 1, "zero" 1;
   -webkit-font-feature-settings: "pnum" 0, "tnum" 1, "zero" 1;
   font-feature-settings: "pnum" 0, "tnum" 1, "zero" 1;
   clear: both;
