--- a/styles/documents.css
+++ b/styles/documents.css
@@ -339,10 +339,10 @@ table {
   border-spacing: 0; }
 
 body {
-  margin: 2em 1em;
-  color: #333;
   background-color: #fcfcfc;
-  font: 1em/1.75 "Source Sans Pro", "Helvetica Neue", "Calibri", sans-serif; }
+  color: #333;
+  font: 1em/1.75 "Source Sans Pro", "Helvetica Neue", "Calibri", sans-serif;
+  margin: 2em 1em; }
   @media (min-width: 28em) {
     body {
       margin: 2em; } }
@@ -356,32 +356,32 @@ h3,
 h4,
 h5,
 h6 {
-  margin: 2em 0 0 0; }
+  margin: 2em 0 0; }
 
 p {
-  margin: 2em 0 0 0; }
+  margin: 2em 0 0; }
 
 hr {
-  margin: 2em auto 0 auto;
-  border-top: none;
-  border-right: none;
   border-bottom: 3px double #b0b0b0;
-  border-left: none;
-  width: 50%;
-  height: 0; }
+  border-left: 0;
+  border-right: 0;
+  border-top: 0;
+  height: 0;
+  margin: 2em auto 0;
+  width: 50%; }
 
 pre {
-  margin: 2em 0 0 0;
-  padding: 1em;
   background-color: #f4f4f4;
-  font: 0.875em/1.25 "Source Code Pro", "Menlo", "Consolas", monospace; }
+  font: 0.875em/1.25 "Source Code Pro", "Menlo", "Consolas", monospace;
+  margin: 2em 0 0;
+  padding: 1em; }
 
 blockquote {
   margin: 2em 0 0 2.5em; }
 
 ol,
 ul {
-  margin: 2em 0 0 0;
+  margin: 2em 0 0;
   padding-left: 2.5em; }
   ol ol,
   ol ul,
@@ -390,7 +390,7 @@ ul {
     margin-top: 0; }
 
 dl {
-  margin: 2em 0 0 0; }
+  margin: 2em 0 0; }
   dl dd {
     margin-left: 2.5em; }
   dl dl {
@@ -408,10 +408,10 @@ strong {
   font-weight: bold; }
 
 q:before {
-  content: "\201C\0020"; }
+  content: '\201C\0020'; }
 
 q:after {
-  content: "\0020\201D"; }
+  content: '\0020\201D'; }
 
 abbr,
 acronym {
@@ -431,31 +431,32 @@ del {
   text-decoration: line-through; }
 
 img {
-  max-width: 100%;
   -moz-box-sizing: border-box;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  height: auto;
+  max-width: 100%; }
 
 table {
-  margin: 2em 0 0 0; }
+  margin: 2em 0 0; }
   table th {
-    padding: 0.5em;
+    background-color: #d6d6d6;
     border: 1px solid #898989;
     color: #333;
-    background-color: #d6d6d6;
     font-weight: bold;
+    padding: 0.5em;
     text-align: left; }
   table td {
-    padding: 0.5em;
+    background-color: #f4f4f4;
     border: 1px solid #898989;
     color: #333;
-    background-color: #f4f4f4; }
+    padding: 0.5em; }
 
 @media print {
   * {
-    box-shadow: none !important;
-    color: black !important;
     background-color: transparent !important;
     background-image: none !important;
+    box-shadow: none !important;
+    color: #000 !important;
     text-shadow: none !important; } }
 body {
   -webkit-font-feature-settings: "kern" 1, "liga" 1, "lnum" 1, "pnum" 1;
