--- a/styles/natural.css
+++ b/styles/natural.css
@@ -337,10 +337,10 @@ table {
   border-spacing: 0; }
 
 body {
-  margin: 2em 1em;
-  color: black;
-  background-color: white;
-  font: 1em/1.75 "Helvetica Neue", "Calibri", sans-serif; }
+  background-color: #fff;
+  color: #000;
+  font: 1em/1.75 "Helvetica Neue", "Calibri", sans-serif;
+  margin: 2em 1em; }
   @media (min-width: 28em) {
     body {
       margin: 2em; } }
@@ -354,32 +354,32 @@ h3,
 h4,
 h5,
 h6 {
-  margin: 2em 0 0 0; }
+  margin: 2em 0 0; }
 
 p {
-  margin: 2em 0 0 0; }
+  margin: 2em 0 0; }
 
 hr {
-  margin: 2em auto 0 auto;
-  border-top: none;
-  border-right: none;
   border-bottom: 3px double #b3b3b3;
-  border-left: none;
-  width: 50%;
-  height: 0; }
+  border-left: 0;
+  border-right: 0;
+  border-top: 0;
+  height: 0;
+  margin: 2em auto 0;
+  width: 50%; }
 
 pre {
-  margin: 2em 0 0 0;
-  padding: 1em;
   background-color: #f7f7f7;
-  font: 0.875em/1.25 "Menlo", "Consolas", monospace; }
+  font: 0.875em/1.25 "Menlo", "Consolas", monospace;
+  margin: 2em 0 0;
+  padding: 1em; }
 
 blockquote {
   margin: 2em 0 0 2.5em; }
 
 ol,
 ul {
-  margin: 2em 0 0 0;
+  margin: 2em 0 0;
   padding-left: 2.5em; }
   ol ol,
   ol ul,
@@ -388,32 +388,32 @@ ul {
     margin-top: 0; }
 
 dl {
-  margin: 2em 0 0 0; }
+  margin: 2em 0 0; }
   dl dd {
     margin-left: 2.5em; }
   dl dl {
     margin: 0; }
 
 a {
-  color: blue; }
+  color: #00f; }
 
 em {
   font-style: normal;
   font-weight: bold; }
 
 strong {
-  color: red;
+  color: #f00;
   font-weight: bold; }
 
 q:before {
-  content: "\201C\0020"; }
+  content: '\201C\0020'; }
 
 q:after {
-  content: "\0020\201D"; }
+  content: '\0020\201D'; }
 
 abbr,
 acronym {
-  border-bottom: 1px dotted black;
+  border-bottom: 1px dotted #000;
   cursor: help; }
 
 code,
@@ -429,29 +429,30 @@ del {
   text-decoration: line-through; }
 
 img {
-  max-width: 100%;
   -moz-box-sizing: border-box;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  height: auto;
+  max-width: 100%; }
 
 table {
-  margin: 2em 0 0 0; }
+  margin: 2em 0 0; }
   table th {
-    padding: 0.5em;
-    border: 1px solid #8c8c8c;
-    color: black;
     background-color: #d9d9d9;
+    border: 1px solid #8c8c8c;
+    color: #000;
     font-weight: bold;
+    padding: 0.5em;
     text-align: left; }
   table td {
-    padding: 0.5em;
+    background-color: #f7f7f7;
     border: 1px solid #8c8c8c;
-    color: black;
-    background-color: #f7f7f7; }
+    color: #000;
+    padding: 0.5em; }
 
 @media print {
   * {
-    box-shadow: none !important;
-    color: black !important;
     background-color: transparent !important;
     background-image: none !important;
+    box-shadow: none !important;
+    color: #000 !important;
     text-shadow: none !important; } }
