--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.65.5
+ * style.css v6.66.0
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -123,14 +123,14 @@ td {
   /*! Applied wider than 45.23rem */ }
 @media (min-width: 70.202rem) {
   /*! Applied wider than 70.202rem */ }
-.tagline, .content, .global-footer, .subcontent {
+.global-header, .content, .global-footer, .subcontent {
   margin-left: auto;
   margin-right: auto;
   max-width: 36rem;
   padding-left: 0.809rem;
   padding-right: 0.809rem; }
   @media (min-width: 70.202rem) {
-    .tagline, .content, .global-footer, .subcontent {
+    .global-header, .content, .global-footer, .subcontent {
       padding-left: 15.178rem; } }
 
 .flat-ul, .icon-list {
@@ -156,6 +156,19 @@ td {
     top: 0;
     width: 12.751rem;
     z-index: 1; } }
+
+.section-footer {
+  bottom: 100%;
+  font-size: 0.811rem;
+  position: absolute;
+  width: 100%; }
+  .section-footer p {
+    color: #98928c; }
+  @media (min-width: 70.202rem) {
+    .section-footer {
+      width: 12.751rem; }
+      .section-footer p {
+        margin-top: 0.391rem; } }
 
 h1, h2 {
   line-height: 1.294; }
@@ -190,19 +203,6 @@ ol, dl, figure, table {
 h2 + p, h2 + pre, h2 + ul, h2 +
 ol, h2 + dl, h2 + figure, h2 + table {
   margin-top: 0.618rem; }
-
-.section-footer {
-  bottom: 100%;
-  font-size: 0.811rem;
-  position: absolute;
-  width: 100%; }
-  .section-footer p {
-    color: #98928c; }
-  @media (min-width: 70.202rem) {
-    .section-footer {
-      width: 12.751rem; }
-      .section-footer p {
-        margin-top: 0.391rem; } }
 
 .site-search, .searchbox, figure, .global-header, .content, .content > article,
 .content > section, .global-footer, .subcontent, .post-list li {
@@ -456,8 +456,10 @@ th {
   background-color: transparent;
   display: block;
   height: 3.01rem;
-  margin-left: 0.809rem;
   width: 1.86rem; }
+  @media (min-width: 70.202rem) {
+    .logo {
+      margin-left: -14.369rem; } }
 
 .site-navigation {
   font-size: 0.811rem;
@@ -477,8 +479,7 @@ th {
   .site-navigation mark {
     background-color: transparent;
     border-bottom: 0.125rem solid;
-    color: #3598c3;
-    padding-bottom: 0.125rem; }
+    color: #3598c3; }
   @media (min-width: 45.23rem) {
     .site-navigation li {
       padding-left: 1.618rem; } }
@@ -495,9 +496,9 @@ th {
   @media (min-width: 70.202rem) {
     .tagline {
       font-size: 2.124rem;
+      margin-left: -14.369rem;
       margin-top: 6.854rem;
-      max-width: 50.369rem;
-      padding-left: 0.809rem; } }
+      max-width: 50.369rem; } }
 
 .content {
   margin-top: -4.236rem; }
