--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.66.1
+ * style.css v6.66.2
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -394,7 +394,8 @@ code,
 var,
 samp,
 kbd {
-  font-family: "Source Code Pro", "Emoji", monospace; }
+  font-family: "Source Code Pro", "Emoji", monospace;
+  font-size: 0.811rem; }
   p code::before, p code::after, p
   var::before, p
   var::after, p
