--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.66.2
+ * style.css v6.66.3
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -192,9 +192,7 @@ h1 a, .global-header a, .section-footer a, .global-footer a, .icon-list a, .read
       -moz-text-decoration-color: initial;
       -webkit-text-decoration-color: initial;
       text-decoration-color: initial;
-      color: #1188bb; }
-      h1 a:visited, .global-header a:visited, .section-footer a:visited, .global-footer a:visited, .icon-list a:visited, .read-older a:visited, .seemore a:visited, .topic a:visited, .share-buttons a:visited {
-        color: #045375; } }
+      color: #1188bb; } }
 
 p, hr, pre, ul,
 ol, dl, figure, table {
@@ -360,18 +358,12 @@ figcaption {
 a {
   color: #1188bb;
   text-decoration: underline; }
-  a:visited {
-    color: #045375; }
   @supports (-moz-text-decoration-color: red) or (-webkit-text-decoration-color: red) or (text-decoration-color: red) {
     a {
       -moz-text-decoration-color: #5bacd0;
       -webkit-text-decoration-color: #5bacd0;
       text-decoration-color: #5bacd0;
-      color: inherit; }
-      a:visited {
-        -moz-text-decoration-color: #045375;
-        -webkit-text-decoration-color: #045375;
-        text-decoration-color: #045375; } }
+      color: inherit; } }
 
 em {
   color: #534a47;
