--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.66.3
+ * style.css v6.67.0
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -149,26 +149,13 @@ td {
   white-space: nowrap; }
 
 @media (min-width: 70.202rem) {
-  .section-footer, figcaption, .post-list .date, .sidenote, .share-buttons ul {
+  figcaption, .section-footer, .post-list .date, .sidenote, .share-buttons ul {
     margin-right: 1.618rem;
     position: absolute;
     right: 100%;
     top: 0;
     width: 12.751rem;
     z-index: 1; } }
-
-.section-footer {
-  bottom: 100%;
-  font-size: 0.811rem;
-  position: absolute;
-  width: 100%; }
-  .section-footer p {
-    color: #98928c; }
-  @media (min-width: 70.202rem) {
-    .section-footer {
-      width: 12.751rem; }
-      .section-footer p {
-        margin-top: 0.391rem; } }
 
 h1, h2 {
   line-height: 1.294; }
@@ -478,9 +465,9 @@ th {
       padding-left: 1.618rem; } }
 
 .tagline {
-  font-family: "Megrim", "Source Sans Pro", "Emoji", sans-serif;
+  color: #6a625e;
   font-size: 1.313rem;
-  font-weight: 200;
+  font-weight: normal;
   margin-top: 2.618rem; }
   @media (min-width: 45.23rem) {
     .tagline {
@@ -502,16 +489,48 @@ th {
     .content {
       margin-top: 0rem; } }
 
-.section-footer .date {
-  color: #6a625e; }
-.section-footer .tag {
-  color: #6a625e; }
-
 .first-heading {
   margin-top: 8.167rem; }
+  [role="main"] > .first-heading {
+    color: #6a625e;
+    font-size: 1.313rem;
+    font-weight: normal;
+    padding-bottom: 1.0rem; }
+  @media (min-width: 45.23rem) {
+    [role="main"] > .first-heading {
+      font-size: 1.618rem;
+      padding-bottom: 2.618rem; } }
   @media (min-width: 70.202rem) {
     .first-heading {
-      margin-top: 6.854rem; } }
+      margin-top: 6.854rem; }
+      [role="main"] > .first-heading {
+        font-size: 2.124rem;
+        margin-left: -14.369rem;
+        margin-right: 12.751rem;
+        padding-bottom: 5.236rem; } }
+
+.section-footer {
+  bottom: 100%;
+  font-size: 0.811rem;
+  position: absolute;
+  width: 100%; }
+  .section-footer p {
+    color: #98928c; }
+  .section-footer .date {
+    color: #6a625e; }
+  .section-footer .tag {
+    color: #6a625e; }
+  @media (min-width: 70.202rem) {
+    .section-footer {
+      width: 12.751rem; }
+      .section-footer p {
+        margin-top: 0.391rem; }
+      [role="main"] > .section-footer {
+        margin-right: 0;
+        right: 0;
+        text-align: right; }
+        [role="main"] > .section-footer p {
+          margin-top: 0.718rem; } }
 
 .global-footer {
   font-size: 0.811rem;
