--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.67.0
+ * style.css v6.67.2
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -88,6 +88,16 @@ pre {
   overflow: auto; }
 
 /**
+ * Address odd `em`-unit font size rendering in all browsers.
+ */
+code,
+kbd,
+pre,
+samp {
+  font-family: monospace, monospace;
+  font-size: 1em; }
+
+/**
  * 1. Correct color not being inherited.
  *    Known issue: affects color of disabled elements.
  * 2. Correct font properties not being inherited.
@@ -119,17 +129,17 @@ td {
 @font-face {
   font-family: 'Emoji';
   src: local("Apple Color Emoji"), local("Segoe UI Emoji"), local("Segoe UI Symbol"); }
-@media (min-width: 45.23rem) {
-  /*! Applied wider than 45.23rem */ }
-@media (min-width: 70.202rem) {
-  /*! Applied wider than 70.202rem */ }
+@media (min-width: 39.118rem) {
+  /*! Applied wider than 39.118rem */ }
+@media (min-width: 53.487rem) {
+  /*! Applied wider than 53.487rem */ }
 .global-header, .content, .global-footer, .subcontent {
   margin-left: auto;
   margin-right: auto;
   max-width: 36rem;
   padding-left: 0.809rem;
   padding-right: 0.809rem; }
-  @media (min-width: 70.202rem) {
+  @media (min-width: 53.487rem) {
     .global-header, .content, .global-footer, .subcontent {
       padding-left: 15.178rem; } }
 
@@ -148,7 +158,7 @@ td {
   text-overflow: ellipsis;
   white-space: nowrap; }
 
-@media (min-width: 70.202rem) {
+@media (min-width: 53.487rem) {
   figcaption, .section-footer, .post-list .date, .sidenote, .share-buttons ul {
     margin-right: 1.618rem;
     position: absolute;
@@ -224,24 +234,15 @@ html {
   -webkit-font-feature-settings: "kern" 1, "liga" 1, "lnum" 1, "pnum" 1;
   font-feature-settings: "kern" 1, "liga" 1, "lnum" 1, "pnum" 1;
   font-size: 100%; }
-  @media (min-width: 52.297rem) and (min-height: 26.149rem) {
-    html {
-      font-size: 115.625%; } }
-  @media (min-width: 113.588rem) and (min-height: 56.794rem) {
-    html {
-      font-size: 131.25%; } }
 
 body {
   background-color: #fcf9f0;
   color: #3c3330;
   font-family: "Source Sans Pro", "Emoji", sans-serif;
-  line-height: 1.456; }
-  @media (min-width: 45.23rem) {
-    body {
-      line-height: 1.618; } }
+  line-height: 1.618; }
 
 h1 {
-  color: #534a47;
+  color: #6a625e;
   font-size: 1.618rem;
   margin: 6.854rem 0 0; }
 
@@ -266,13 +267,11 @@ pre {
   -webkit-font-feature-settings: "kern" 0, "liga" 0, "pnum" 0, "tnum" 1, "zero" 1;
   font-feature-settings: "kern" 0, "liga" 0, "pnum" 0, "tnum" 1, "zero" 1;
   clear: both;
-  font-family: "Source Code Pro", "Emoji", monospace;
-  font-size: 0.811rem;
   line-height: 1.294; }
-  @media (min-width: 45.23rem) {
+  @media (min-width: 39.118rem) {
     pre {
+      overflow: visible;
       overflow-wrap: break-word;
-      overflow-x: visible;
       white-space: pre-wrap;
       word-wrap: break-word; } }
 
@@ -281,7 +280,7 @@ blockquote {
   color: #6a625e;
   margin: 0;
   padding-left: 1.618rem; }
-  @media (min-width: 70.202rem) {
+  @media (min-width: 53.487rem) {
     blockquote {
       margin-left: -1.868rem; } }
 
@@ -294,7 +293,7 @@ ol {
   ol ul,
   ol ol {
     margin-top: 0; }
-  @media (min-width: 70.202rem) {
+  @media (min-width: 53.487rem) {
     ul,
     ol {
       padding-left: 0; }
@@ -323,7 +322,7 @@ figcaption {
     color: #6a625e;
     padding-left: 1.618rem;
     padding-top: 0.618rem; }
-  @media (min-width: 70.202rem) {
+  @media (min-width: 53.487rem) {
     figcaption {
       border-top: 0.063rem solid #e1ddd5;
       padding-top: 0.681rem; }
@@ -369,23 +368,17 @@ abbr {
   font-size: 0.811rem;
   letter-spacing: 0.063rem; }
 
-code,
-var,
-samp,
-kbd {
-  font-family: "Source Code Pro", "Emoji", monospace;
-  font-size: 0.811rem; }
-  p code::before, p code::after, p
-  var::before, p
-  var::after, p
-  samp::before, p
-  samp::after, p
-  kbd::before, p
-  kbd::after {
-    content: ' ';
-    display: inline-block;
-    font-size: 0;
-    width: 0; }
+p code::before, p code::after, p
+var::before, p
+var::after, p
+samp::before, p
+samp::after, p
+kbd::before, p
+kbd::after {
+  content: ' ';
+  display: inline-block;
+  font-size: 0;
+  width: 0; }
 
 mark {
   background-color: #ffba0c;
@@ -437,7 +430,7 @@ th {
   display: block;
   height: 3.01rem;
   width: 1.86rem; }
-  @media (min-width: 70.202rem) {
+  @media (min-width: 53.487rem) {
     .logo {
       margin-left: -14.369rem; } }
 
@@ -460,51 +453,46 @@ th {
     background-color: transparent;
     border-bottom: 0.125rem solid;
     color: #3598c3; }
-  @media (min-width: 45.23rem) {
+  @media (min-width: 39.118rem) {
     .site-navigation li {
       padding-left: 1.618rem; } }
 
 .tagline {
   color: #6a625e;
-  font-size: 1.313rem;
+  font-size: 2.124rem;
   font-weight: normal;
   margin-top: 2.618rem; }
-  @media (min-width: 45.23rem) {
+  @media (min-width: 39.118rem) {
     .tagline {
-      font-size: 1.618rem;
       margin-top: 4.236rem; } }
-  @media (min-width: 70.202rem) {
+  @media (min-width: 53.487rem) {
     .tagline {
-      font-size: 2.124rem;
       margin-left: -14.369rem;
       margin-top: 6.854rem;
       max-width: 50.369rem; } }
 
 .content {
   margin-top: -4.236rem; }
-  @media (min-width: 45.23rem) {
+  @media (min-width: 39.118rem) {
     .content {
       margin-top: -2.618rem; } }
-  @media (min-width: 70.202rem) {
+  @media (min-width: 53.487rem) {
     .content {
       margin-top: 0rem; } }
 
 .first-heading {
   margin-top: 8.167rem; }
   [role="main"] > .first-heading {
-    color: #6a625e;
-    font-size: 1.313rem;
+    font-size: 2.124rem;
     font-weight: normal;
     padding-bottom: 1.0rem; }
-  @media (min-width: 45.23rem) {
+  @media (min-width: 39.118rem) {
     [role="main"] > .first-heading {
-      font-size: 1.618rem;
       padding-bottom: 2.618rem; } }
-  @media (min-width: 70.202rem) {
+  @media (min-width: 53.487rem) {
     .first-heading {
       margin-top: 6.854rem; }
       [role="main"] > .first-heading {
-        font-size: 2.124rem;
         margin-left: -14.369rem;
         margin-right: 12.751rem;
         padding-bottom: 5.236rem; } }
@@ -520,7 +508,7 @@ th {
     color: #6a625e; }
   .section-footer .tag {
     color: #6a625e; }
-  @media (min-width: 70.202rem) {
+  @media (min-width: 53.487rem) {
     .section-footer {
       width: 12.751rem; }
       .section-footer p {
@@ -545,7 +533,7 @@ th {
     content: '\a0\a0'; }
   .footlinks li:first-child::after {
     content: ' ·\a0'; }
-@media (min-width: 70.202rem) {
+@media (min-width: 53.487rem) {
   .footlinks ul {
     margin-top: 6.854rem; } }
 
@@ -561,7 +549,7 @@ th {
   .byline mark {
     background-color: transparent;
     color: inherit; }
-  @media (min-width: 70.202rem) {
+  @media (min-width: 53.487rem) {
     .byline {
       bottom: 0;
       left: 0.809rem;
@@ -571,7 +559,7 @@ th {
   margin-bottom: 4.236rem;
   margin-top: -2.618rem;
   max-width: 22.249rem; }
-  @media (min-width: 45.23rem) {
+  @media (min-width: 39.118rem) {
     .site-search {
       bottom: 7.632rem;
       margin-bottom: 0;
@@ -580,7 +568,7 @@ th {
       position: absolute;
       right: 0.809rem;
       z-index: 1; } }
-  @media (min-width: 70.202rem) {
+  @media (min-width: 53.487rem) {
     .site-search {
       bottom: 3.958rem; } }
 
@@ -593,14 +581,14 @@ th {
 
 .drop img {
   min-width: 12.751rem; }
-@media (min-width: 70.202rem) {
+@media (min-width: 53.487rem) {
   .drop {
     float: left;
     margin-left: -14.369rem;
     margin-right: 0.809rem;
     max-width: 32.369rem; } }
 
-@media (min-width: 45.23rem) {
+@media (min-width: 39.118rem) {
   .flat-ul {
     margin-left: -0.809rem;
     margin-right: -0.809rem;
@@ -614,7 +602,7 @@ th {
       padding-right: 0.809rem;
       width: 33.333%; } }
 
-@media (min-width: 45.23rem) {
+@media (min-width: 39.118rem) {
   .floatage-left {
     float: left;
     margin-right: 0.809rem;
@@ -644,7 +632,7 @@ th {
     width: 100%; }
   .full-width figcaption:last-child {
     margin-left: 0.809rem; }
-  @media (min-width: 70.202rem) {
+  @media (min-width: 53.487rem) {
     .full-width {
       margin-left: -15.178rem; }
       .full-width figcaption:last-child {
@@ -696,11 +684,11 @@ th {
   display: block;
   font-size: 0.811rem;
   line-height: 1; }
-@media (min-width: 45.23rem) {
+@media (min-width: 39.118rem) {
   .post-list .date {
     float: right;
     line-height: 1.995; } }
-@media (min-width: 70.202rem) {
+@media (min-width: 53.487rem) {
   .post-list .date {
     float: none;
     overflow-x: hidden;
@@ -728,11 +716,11 @@ th {
     .pull-quote p::after {
       content: close-quote;
       font-weight: bold; }
-  @media (min-width: 45.23rem) {
+  @media (min-width: 39.118rem) {
     .pull-quote {
       margin-left: 2.618rem;
       margin-right: 2.618rem; } }
-  @media (min-width: 70.202rem) {
+  @media (min-width: 53.487rem) {
     .pull-quote {
       float: left;
       margin-left: -14.369rem;
@@ -772,7 +760,7 @@ th {
 .sidenote {
   color: #98928c;
   font-size: 0.811rem; }
-  @media (min-width: 70.202rem) {
+  @media (min-width: 53.487rem) {
     .sidenote {
       top: auto; } }
 
@@ -809,7 +797,7 @@ th {
 .share-buttons .hatena-bookmark a {
   background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22512%22%20height%3D%22512%22%20viewBox%3D%220%200%20512%20512%22%3E%3Cpath%20d%3D%22M362.52%20374.158c-1.06%2027.738%2029.272%2050.062%2055.45%2040.82%2026.608-7.228%2039.004-42.437%2022.73-64.717-14.53-23.373-51.72-25.17-68.422-3.29-6.286%207.567-9.8%2017.35-9.76%2027.188zm3.82-279.222h77.837v212.59H366.34V94.936zM247.945%20237.96c28.8-2.354%2051.608-28.057%2053.18-56.463%203.66-27.783-5.13-60.604-31.928-73.97-33.543-16.95-72.07-11.418-108.353-12.42-32.282%200-64.563-.004-96.845-.006v321.964c49.15-.277%2098.325.59%20147.46-.508%2037.25-1.846%2079.264-14.91%2097.464-50.294%2018.813-37.007%2012.952-90.027-24.076-113.605-11.14-7.354-23.904-11.933-36.902-14.698zm-101.92-82.215c17.912.9%2036.476-2.518%2053.72%203.52%2026.227%207.993%2024.854%2053.487-2.882%2057.92-16.806%202.46-33.892.985-50.834%201.388%200-20.942-.002-41.885-.004-62.828zM188.43%20348.61h-42.406v-70.67c21.382.678%2043.044-1.73%2064.18%202.102%2022.726%204.5%2027.114%2033.67%2018.215%2051.517-7.668%2014.163-25.366%2017.096-39.99%2017.05z%22%20fill%3D%22%23008cd6%22%2F%3E%3C%2Fsvg%3E");
   color: #008cd6; }
-@media (min-width: 70.202rem) {
+@media (min-width: 53.487rem) {
   .share-buttons ul {
     bottom: 0;
     top: auto; } }
@@ -821,17 +809,9 @@ th {
   margin-top: 1.618rem;
   overflow: hidden;
   width: 300px; }
-  @media (min-width: 349px) {
+  @media (min-width: 352px) {
     .adsbygoogle {
       margin-left: 0.809rem; } }
-  @media (min-width: 385px) {
-    .adsbygoogle {
-      height: 280px;
-      width: 336px; } }
-  @media (min-width: 1717px) {
-    .adsbygoogle {
-      height: 90px;
-      width: 728px; } }
 
 img[src$='.svg'], img[src$='.svgz'] {
   width: 100%; }
@@ -861,13 +841,6 @@ html {
 
   body {
     font-family: serif; }
-
-  pre,
-  code,
-  var,
-  samp,
-  kbd {
-    font-family: monospace; }
 
   h1,
   h2,
