--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.67.2
+ * style.css v6.67.3
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -170,14 +170,14 @@ td {
 h1, h2 {
   line-height: 1.294; }
 
-hr, .seealso {
+hr, .seealso, .share-buttons a {
   overflow: hidden; }
-  hr:before, .seealso:before {
+  hr:before, .seealso:before, .share-buttons a:before {
     display: block;
     width: 100%;
     height: 100%;
     content: "\00a0"; }
-  hr::before, .seealso::before {
+  hr::before, .seealso::before, .share-buttons a::before {
     background-position: center center;
     background-repeat: no-repeat;
     background-size: contain; }
@@ -310,7 +310,7 @@ dl {
 
 dt {
   color: #534a47;
-  font-weight: bold; }
+  font-weight: bolder; }
 
 dd {
   padding-left: 2.618rem; }
@@ -428,8 +428,8 @@ th {
 .logo {
   background-color: transparent;
   display: block;
-  height: 3.01rem;
-  width: 1.86rem; }
+  height: 4.87rem;
+  width: 3.01rem; }
   @media (min-width: 53.487rem) {
     .logo {
       margin-left: -14.369rem; } }
@@ -441,10 +441,10 @@ th {
   position: absolute;
   right: 0.809rem;
   text-transform: uppercase;
-  top: 0.575rem; }
+  top: 0.93rem; }
   .site-navigation li {
     display: table-cell;
-    line-height: 1.86rem;
+    line-height: 3.01rem;
     padding-left: 0.809rem; }
   .site-navigation a {
     color: inherit;
@@ -483,6 +483,7 @@ th {
 .first-heading {
   margin-top: 8.167rem; }
   [role="main"] > .first-heading {
+    color: #6a625e;
     font-size: 2.124rem;
     font-weight: normal;
     padding-bottom: 1.0rem; }
@@ -545,7 +546,7 @@ th {
     display: block;
     height: 0;
     margin-bottom: 0.618rem;
-    width: 1.86rem; }
+    width: 3.01rem; }
   .byline mark {
     background-color: transparent;
     color: inherit; }
@@ -712,10 +713,10 @@ th {
     quotes: '\201c' '\201d'; }
     .pull-quote p::before {
       content: open-quote;
-      font-weight: bold; }
+      font-weight: bolder; }
     .pull-quote p::after {
       content: close-quote;
-      font-weight: bold; }
+      font-weight: bolder; }
   @media (min-width: 39.118rem) {
     .pull-quote {
       margin-left: 2.618rem;
@@ -730,7 +731,7 @@ th {
   color: #534a47;
   content: 'Read older:';
   display: block;
-  font-weight: bold;
+  font-weight: bolder;
   line-height: 1;
   margin-top: 4.236rem;
   text-transform: uppercase; }
@@ -752,7 +753,7 @@ th {
     width: 1.313rem; }
 
 .seemore a {
-  font-weight: bold;
+  font-weight: bolder;
   text-transform: uppercase; }
   .seemore a::before {
     content: '➔ '; }
@@ -770,33 +771,32 @@ th {
   color: #1188bb;
   content: 'More ➟';
   font-size: 0.811rem;
-  font-weight: bold;
+  font-weight: bolder;
   margin-left: 0.333rem;
   text-transform: uppercase;
   white-space: nowrap; }
 
 .share-buttons ul {
-  font-size: 0.811rem;
   padding-left: 0; }
+  .share-buttons ul::before {
+    color: #98928c;
+    content: 'Share:'; }
+.share-buttons ul::before,
 .share-buttons li {
   display: table-cell;
-  line-height: 1.618rem;
   padding-right: 0.5rem; }
 .share-buttons a {
-  background-position: left center;
-  background-repeat: no-repeat;
-  background-size: auto 64.894%;
-  display: inline-block;
-  padding-left: 1.151rem; }
-.share-buttons .twitter-tweet a {
-  background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22512%22%20height%3D%22512%22%20viewBox%3D%220%200%20512%20512%22%3E%3Cpath%20d%3D%22M492.255%20109.456c-17.384%207.71-36.07%2012.92-55.676%2015.264%2020.01-11.997%2035.383-30.994%2042.622-53.632-18.733%2011.11-39.478%2019.177-61.56%2023.524C399.96%2075.77%20374.764%2064%20346.88%2064c-53.535%200-96.942%2043.402-96.942%2096.938%200%207.598.857%2014.997%202.51%2022.092-80.566-4.042-152-42.637-199.81-101.287-8.345%2014.317-13.126%2030.97-13.126%2048.737%200%2033.633%2017.114%2063.305%2043.127%2080.688-15.89-.503-30.84-4.864-43.907-12.124-.01.404-.01.808-.01%201.22%200%2046.967%2033.417%2086.146%2077.763%2095.054-8.134%202.215-16.698%203.4-25.54%203.4-6.246%200-12.318-.608-18.24-1.74%2012.338%2038.513%2048.138%2066.542%2090.56%2067.32C130.087%20390.303%2088.288%20405.8%2042.87%20405.8c-7.825%200-15.542-.46-23.125-1.356C62.645%20431.95%20113.602%20448%20168.345%20448c178.31%200%20275.82-147.716%20275.82-275.82%200-4.204-.096-8.383-.283-12.54%2018.943-13.67%2035.377-30.743%2048.373-50.184%22%20fill%3D%22%2300acee%22%2F%3E%3C%2Fsvg%3E");
-  color: #00acee; }
-.share-buttons .facebook-share a {
-  background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22512%22%20height%3D%22512%22%20viewBox%3D%220%200%20512%20512%22%3E%3Cpath%20d%3D%22M64%20112v288c0%2032%2016%2048%2048%2048h147.354V285.28h-33.54v-53.485h33.54V198.71c-.227-22.778%205.552-40.228%2017.337-52.353%2011.785-12.123%2030.936-18.244%2057.453-18.357%209.102.037%2017.524.642%2025.267%201.812%207.743%201.172%2015.94%202.684%2024.59%204.534l-8.158%2051.216c-4.694-.925-9.697-1.68-15.014-2.265-5.317-.585-9.982-.888-13.994-.906-10.048.076-16.357%202.19-18.926%206.346-2.57%204.155-3.662%209.897-3.285%2017.225v25.835h52.125l-4.533%2053.486h-47.592V448H400c32%200%2048-16%2048-48V112c0-32-16-48-48-48H108c-28%200-44%2016-44%2048z%22%20fill%3D%22%233b5998%22%2F%3E%3C%2Fsvg%3E");
-  color: #3b5998; }
-.share-buttons .hatena-bookmark a {
-  background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22512%22%20height%3D%22512%22%20viewBox%3D%220%200%20512%20512%22%3E%3Cpath%20d%3D%22M362.52%20374.158c-1.06%2027.738%2029.272%2050.062%2055.45%2040.82%2026.608-7.228%2039.004-42.437%2022.73-64.717-14.53-23.373-51.72-25.17-68.422-3.29-6.286%207.567-9.8%2017.35-9.76%2027.188zm3.82-279.222h77.837v212.59H366.34V94.936zM247.945%20237.96c28.8-2.354%2051.608-28.057%2053.18-56.463%203.66-27.783-5.13-60.604-31.928-73.97-33.543-16.95-72.07-11.418-108.353-12.42-32.282%200-64.563-.004-96.845-.006v321.964c49.15-.277%2098.325.59%20147.46-.508%2037.25-1.846%2079.264-14.91%2097.464-50.294%2018.813-37.007%2012.952-90.027-24.076-113.605-11.14-7.354-23.904-11.933-36.902-14.698zm-101.92-82.215c17.912.9%2036.476-2.518%2053.72%203.52%2026.227%207.993%2024.854%2053.487-2.882%2057.92-16.806%202.46-33.892.985-50.834%201.388%200-20.942-.002-41.885-.004-62.828zM188.43%20348.61h-42.406v-70.67c21.382.678%2043.044-1.73%2064.18%202.102%2022.726%204.5%2027.114%2033.67%2018.215%2051.517-7.668%2014.163-25.366%2017.096-39.99%2017.05z%22%20fill%3D%22%23008cd6%22%2F%3E%3C%2Fsvg%3E");
-  color: #008cd6; }
+  display: block;
+  height: 1.618rem;
+  width: 1.618rem; }
+  .share-buttons a::before {
+    background-size: auto 81.117%; }
+.share-buttons .twitter-tweet a::before {
+  background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22512%22%20height%3D%22512%22%20viewBox%3D%220%200%20512%20512%22%3E%3Cpath%20d%3D%22M492.255%20109.456c-17.384%207.71-36.07%2012.92-55.676%2015.264%2020.01-11.997%2035.383-30.994%2042.622-53.632-18.733%2011.11-39.478%2019.177-61.56%2023.524C399.96%2075.77%20374.764%2064%20346.88%2064c-53.535%200-96.942%2043.402-96.942%2096.938%200%207.598.857%2014.997%202.51%2022.092-80.566-4.042-152-42.637-199.81-101.287-8.345%2014.317-13.126%2030.97-13.126%2048.737%200%2033.633%2017.114%2063.305%2043.127%2080.688-15.89-.503-30.84-4.864-43.907-12.124-.01.404-.01.808-.01%201.22%200%2046.967%2033.417%2086.146%2077.763%2095.054-8.134%202.215-16.698%203.4-25.54%203.4-6.246%200-12.318-.608-18.24-1.74%2012.338%2038.513%2048.138%2066.542%2090.56%2067.32C130.087%20390.303%2088.288%20405.8%2042.87%20405.8c-7.825%200-15.542-.46-23.125-1.356C62.645%20431.95%20113.602%20448%20168.345%20448c178.31%200%20275.82-147.716%20275.82-275.82%200-4.204-.096-8.383-.283-12.54%2018.943-13.67%2035.377-30.743%2048.373-50.184%22%20fill%3D%22%2300acee%22%2F%3E%3C%2Fsvg%3E"); }
+.share-buttons .facebook-share a::before {
+  background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22512%22%20height%3D%22512%22%20viewBox%3D%220%200%20512%20512%22%3E%3Cpath%20d%3D%22M64%20112v288c0%2032%2016%2048%2048%2048h147.354V285.28h-33.54v-53.485h33.54V198.71c-.227-22.778%205.552-40.228%2017.337-52.353%2011.785-12.123%2030.936-18.244%2057.453-18.357%209.102.037%2017.524.642%2025.267%201.812%207.743%201.172%2015.94%202.684%2024.59%204.534l-8.158%2051.216c-4.694-.925-9.697-1.68-15.014-2.265-5.317-.585-9.982-.888-13.994-.906-10.048.076-16.357%202.19-18.926%206.346-2.57%204.155-3.662%209.897-3.285%2017.225v25.835h52.125l-4.533%2053.486h-47.592V448H400c32%200%2048-16%2048-48V112c0-32-16-48-48-48H108c-28%200-44%2016-44%2048z%22%20fill%3D%22%233b5998%22%2F%3E%3C%2Fsvg%3E"); }
+.share-buttons .hatena-bookmark a::before {
+  background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22512%22%20height%3D%22512%22%20viewBox%3D%220%200%20512%20512%22%3E%3Cpath%20d%3D%22M362.52%20374.158c-1.06%2027.738%2029.272%2050.062%2055.45%2040.82%2026.608-7.228%2039.004-42.437%2022.73-64.717-14.53-23.373-51.72-25.17-68.422-3.29-6.286%207.567-9.8%2017.35-9.76%2027.188zm3.82-279.222h77.837v212.59H366.34V94.936zM247.945%20237.96c28.8-2.354%2051.608-28.057%2053.18-56.463%203.66-27.783-5.13-60.604-31.928-73.97-33.543-16.95-72.07-11.418-108.353-12.42-32.282%200-64.563-.004-96.845-.006v321.964c49.15-.277%2098.325.59%20147.46-.508%2037.25-1.846%2079.264-14.91%2097.464-50.294%2018.813-37.007%2012.952-90.027-24.076-113.605-11.14-7.354-23.904-11.933-36.902-14.698zm-101.92-82.215c17.912.9%2036.476-2.518%2053.72%203.52%2026.227%207.993%2024.854%2053.487-2.882%2057.92-16.806%202.46-33.892.985-50.834%201.388%200-20.942-.002-41.885-.004-62.828zM188.43%20348.61h-42.406v-70.67c21.382.678%2043.044-1.73%2064.18%202.102%2022.726%204.5%2027.114%2033.67%2018.215%2051.517-7.668%2014.163-25.366%2017.096-39.99%2017.05z%22%20fill%3D%22%23008cd6%22%2F%3E%3C%2Fsvg%3E"); }
 @media (min-width: 53.487rem) {
   .share-buttons ul {
     bottom: 0;
