Simplify weblog permalink markup

--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -48,7 +48,8 @@
   <body>
     {{> global-header}}
 
-    <main class="content"<?$permalink::is_permalink ne="1"> role="main"</?>>
+    <?$permalink::is_permalink eq="1"><div class="content"></?>
+    <?$permalink::is_permalink ne="1"><main class="content" role="main"></?>
       <?$categories::enabled eq="1">
         <section class="post-list">
           <h1 class="first-heading">“$categories::title”についての記事</h1>
@@ -63,7 +64,8 @@
 <!-- blosxom date -->
 
 <!-- blosxom story -->
-      <article<?$permalink::is_permalink eq="1"> role="main"</?>>
+      <?$permalink::is_permalink eq="1"><div role="main"></?>
+      <?$permalink::is_permalink ne="1"><article></?>
         <?$utils::has_image ne="1"><meta content="{{image}}" itemprop="image"></?>
         <link href="$url$path/$fn.$default_flavour" itemprop="url">
 
@@ -83,7 +85,8 @@
             <li class="hatena-bookmark"><a href="http://b.hatena.ne.jp/my/add.confirm?title=<@utils.encode_uri_component output="Yes">$title - $blog_title - {{site_title}}</@utils.encode_uri_component>&amp;url=<@utils.encode_uri_component output="Yes">$url$path/$fn.$default_flavour</@utils.encode_uri_component>">Bookmark</a></li>
           </ul>
         </aside>
-      </article>
+      <?$permalink::is_permalink eq="1"></div></?>
+      <?$permalink::is_permalink ne="1"></article></?>
 
       <?$story_counter::count eq="1">
         {{> google-adsense__ad-main}}
@@ -102,7 +105,8 @@
 
         {{> google-adsense__ad-main}}
       </?>
-    </main>
+    <?$permalink::is_permalink ne="1"></main></?>
+    <?$permalink::is_permalink eq="1"></div></?>
 
     {{> global-footer}}
 
