--- a/src/html/partial/global-header.mustache
+++ b/src/html/partial/global-header.mustache
@@ -1,4 +1,8 @@
-<header class="global-header" role="banner">
+{{#weblog_child}}
+  <?$permalink::is_permalink ne="1"><header class="global-header" role="banner"></?>
+  <?$permalink::is_permalink eq="1"><div class="global-header" role="banner"></?>
+{{/weblog_child}}
+{{^weblog_child}}<header class="global-header" role="banner">{{/weblog_child}}
   {{#home}}<mark class="logo"><img alt="{{site_title}}" src="{{site_logo}}"></mark>{{/home}}
 
   <nav>
@@ -19,4 +23,8 @@
   </nav>
 
   {{#tagline}}<h1 class="tagline">{{{.}}}</h1>{{/tagline}}
-</header>
+{{#weblog_child}}
+  <?$permalink::is_permalink ne="1"></header></?>
+  <?$permalink::is_permalink eq="1"></div></?>
+{{/weblog_child}}
+{{^weblog_child}}</header>{{/weblog_child}}
