--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.67.3
+ * style.css v6.67.4
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -200,7 +200,8 @@ ol, h2 + dl, h2 + figure, h2 + table {
   margin-top: 0.618rem; }
 
 .site-search, .searchbox, figure, .global-header, .content, .content > article,
-.content > section, .global-footer, .subcontent, .post-list li {
+.content > section,
+.content > [role="main"], .global-footer, .subcontent, .post-list li {
   position: relative; }
 
 .site-search .query, .searchbox .query {
