Add `has-image` class with full width image

--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -64,7 +64,7 @@
 <!-- blosxom date -->
 
 <!-- blosxom story -->
-      <?$permalink::is_permalink eq="1"><div role="main"></?>
+      <?$permalink::is_permalink eq="1"><div</?><?$utils::has_eyecatch eq="1"> class="has-image"</?><?$permalink::is_permalink eq="1"> role="main"</?><?$permalink::is_permalink eq="1">></?>
       <?$permalink::is_permalink ne="1"><article></?>
         <?$utils::has_image ne="1"><meta content="{{image}}" itemprop="image"></?>
         <link href="$url$path/$fn.$default_flavour" itemprop="url">
