--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -82,6 +82,7 @@
           <ul>
             <li class="twitter-tweet"><a href="https://twitter.com/intent/tweet?text=<@utils.encode_uri_component output="Yes">$title - $blog_title - {{site_title}}</@utils.encode_uri_component>&amp;url=<@utils.encode_uri_component output="Yes">$url$path/$fn.$default_flavour</@utils.encode_uri_component>&amp;via=hail2unet&amp;related=hail2u_">Tweet</a></li>
             <li class="facebook-share"><a href="https://www.facebook.com/sharer/sharer.php?u=<@utils.encode_uri_component output="Yes">$url$path/$fn.$default_flavour</@utils.encode_uri_component>">Share</a></li>
+            <li class="googleplus-share"><a href="https://plus.google.com/share?url=<@utils.encode_uri_component output="Yes">$url$path/$fn.$default_flavour</@utils.encode_uri_component>">Share</a></li>
             <li class="hatena-bookmark"><a href="http://b.hatena.ne.jp/my/add.confirm?title=<@utils.encode_uri_component output="Yes">$title - $blog_title - {{site_title}}</@utils.encode_uri_component>&amp;url=<@utils.encode_uri_component output="Yes">$url$path/$fn.$default_flavour</@utils.encode_uri_component>">Bookmark</a></li>
           </ul>
         </aside>
